<resources>
    <string name="app_name">VetClinic</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_start_page">StartPageActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_clinic_details">ClinicDetailsActivity</string>
    <string name="title_add_new_pet">AddNewPetActivity</string>

    <string name="auth0_domain">eszterjudit.eu.auth0.com</string>
    <string name="auth0_client_id">7gIGe5F7x6pVI5pmb5ySogEhSIozG5zs</string>

    <!-- Login & Sign up-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="show_password">Show</string>
    <string name="hide_password">Hide</string>
    <string name="not_a_member">Not a member yet?</string>
    <string name="already_a_member">Already a member?</string>
    <string name="are_you_a_doctor">Are you a doctor?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_email">This is not a valid email</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="passwords_do_not_match">Passwords do not match</string>

    <!-- Profile -->
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="street">Street and house</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip code</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="pets_list">My pets</string>
    <string name="favorites">My favorites</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="symptom_checker">Symptom checker</string>

    <!-- Map -->
    <string name="map_autocomplete_city_hint">City</string>
    <string name="map_show_only_open_clinics">Only show open clinics</string>

    <!-- Settings -->
    <string name="map_perimeter_settings_item_title">Map perimeter</string>
    <string name="map_perimeter_settings_item_description_1">Current value:&#160;</string>
    <string name="map_perimeter_settings_item_description_2">&#160;km.</string>

    <string name="map_perimeter_dialog_title">Map perimeter</string>
    <string name="map_perimeter_dialog_description">Set the perimeter for map search.</string>
    <string name="map_perimeter_dialog_positive_button">OK</string>
    <string name="map_perimeter_dialog_negative_button">Cancel</string>

    <string name="delete_all_favs_settings_item_title">Delete favorites</string>
    <string name="delete_all_favs_settings_item_description">Delete all favorite clinics for this device.</string>

    <string name="delete_all_favs_dialog_title">Delete favorites</string>
    <string name="delete_all_favs_dialog_description">Are you sure you want to delete all your favorite clinics?</string>
    <string name="delete_all_favs_dialog_positive_button">Delete all</string>
    <string name="delete_all_favs_dialog_negative_button">Cancel</string>

    <!-- Add new pet -->
    <string name="dont_save_pet_dialog_title">Are you sure?</string>
    <string name="dont_save_pet_dialog_description">All your changes will be lost.</string>
    <string name="dont_save_pet_dialog_positive_button">Keep editing</string>
    <string name="dont_save_pet_dialog_negative_button">Go back</string>

    <string name="fields_not_filled_dialog_title">Can\'t save</string>
    <string name="fields_not_filled_dialog_description">Plase fill all fields.</string>
    <string name="fields_not_filled_dialog_positive_button">Ok</string>
    <string name="fields_not_filled_dialog_negative_button">Don\'t save</string>

    <string name="email_cant_be_empty_dialog_title">Email cannot be empty</string>
    <string name="email_cant_be_empty_dialog_description">Please add an email address.</string>
    <string name="email_cant_be_empty_dialog_positive_button">Ok</string>
    <string name="email_cant_be_empty_dialog_negative_button">Don\'t save</string>

    <!-- Symptom checker -->

    <string name="question_1">Is your pet showing lack of appetite?</string>
    <string name="answer_1">Dogs and cats stop eating for a host of reasons, including fever, pain, or stress.\nDogs may be picky, but with cats, you\'ve got to be careful, especially with an overweight cat, because they can develop fatty liver.</string>

    <string name="question_2">Is your pet showing decreased activity?</string>
    <string name="answer_2">Many things can cause lethargy, including major problems, such as heart disease.\nIt may be necessary to visit the vet, especially if other symptoms arise, such as change in exercise tolerance, weakness, collapse, or loss of consciousness.</string>

    <string name="question_3">Is your pet coughing?</string>
    <string name="answer_3">Chronic coughing may be related to heart disease, heartworms, or lung diseases.\nIf a puppy or dog with kennel cough develops more serious symptoms, such as fever, nasal discharge, loss of appetite, lethargy, or a productive cough, it may be getting pneumonia.</string>

    <string name="question_4">Does your pet have itchy skin or shows hair loss?</string>
    <string name="answer_4">Fleas, ticks, mange mites, and ear mites are common reasons for hair loss and itching on the skin or around the ears.\nBut hair loss or itchy skin may also result from endocrine problems, staph infections, fungal or yeast infections, and a host of other causes.</string>

    <string name="question_5">Does your pet have difficulty with rising?</string>
    <string name="answer_5">Pets that suffer stiffness, lameness, inability to bear weight on one leg, or trouble rising from the ground may have hip or spine arthritis, disc disease, ruptured ligaments, or hip dysplasia. Tick-borne diseases, such as Lyme disease, can also cause arthritis.</string>

</resources>
