<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_pets_list"
            android:icon="@drawable/ic_pets"
            android:title="@string/pets_list" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_symptom_checker"
            android:icon="@drawable/ic_self_check"
            android:title="@string/symptom_checker" />
    </group>
<!--
    <item android:title="Communicate">
        <menu>
        </menu>
    </item>
-->
</menu>
