<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signup_container"
    style="@style/FormContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_textInput_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_textInput_layout"
        style="@style/TextInputLayout"
        android:layout_below="@id/email_textInput_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pwd"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_again_textInput_layout"
        style="@style/TextInputLayout"
        android:layout_below="@id/password_textInput_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_again"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pwd"
            android:hint="@string/password_again"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/doctor_or_patient_container"
        style="@style/DoctorOrPatientContainer"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/password_again_textInput_layout"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:id="@+id/are_you_a_doctor_question"
            style="@style/DoctorOrPatientContainer.Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/are_you_a_doctor" />

        <RadioGroup
            android:id="@+id/are_you_a_doctor_radioGroup"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioButton_is_doctor_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButton_is_doctor_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:text="@string/no" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/signup_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/doctor_or_patient_container"
        android:text="@string/signup" />

</RelativeLayout>