<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/login_container"
    style="@style/FormContainer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_textInput_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_textInput_layout"
        style="@style/TextInputLayout"
        android:layout_below="@id/email_textInput_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pwd"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_textInput_layout"
        android:text="@string/login" />

</RelativeLayout>