<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/phone_icon"
            style="@style/ProfileItemIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone" />

        <TextView
            android:id="@+id/phone"
            style="@style/ProfileItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/phone_icon"
            android:text="@string/phone" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/email_icon"
            style="@style/ProfileItemIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail" />

        <TextView
            android:id="@+id/email"
            style="@style/ProfileItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/email_icon"
            android:text="@string/email" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/address_icon"
            style="@style/ProfileItemIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_address" />

        <TextView
            android:id="@+id/street"
            style="@style/ProfileItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/address_icon"
            android:text="@string/street" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/street"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/address_icon"
            android:text="@string/city"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/street"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/city"
            android:text="@string/zip_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/city"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/address_icon"
            android:text="@string/country"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/vet_specialities_conatiner"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/vet_specialities_icon"
            style="@style/ProfileItemIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pets" />

        <TextView
            android:id="@+id/vet_specialities"
            style="@style/ProfileItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/vet_specialities_icon"
            android:text="@string/specialities" />

    </RelativeLayout>

</LinearLayout>