<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <com.me.esztertoth.vetclinicapp.custom.LogoTextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="65sp" />

        <FrameLayout
            android:id="@+id/loginAndSignUp_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo" />

        <LinearLayout
            style="@style/SignUpOrLoginContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginAndSignUp_container" >

        <TextView
            android:id="@+id/login_or_signUp_question"
            style="@style/SignUpOrLoginContainer.Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_member" />

        <TextView
            android:id="@+id/login_or_signUp_link"
            style="@style/SignUpOrLoginContainer.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/login_or_signUp_question"
            android:layout_toRightOf="@id/login_or_signUp_question"
            android:text="@string/signup"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>